--- a/charts/sscs-tribunals-api/values.wa.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.wa.preview.template.yaml
@@ -326,6 +326,7 @@ ccd:
         ORM_ENV: pr
         CCD_DATA_STORE_URL: http://${SERVICE_NAME}-ccd-data-store-api
         RAS_ENV: pr
+        BYPASS_ORG_DROOL_RULE: true
       devmemoryRequests: 1024Mi
       devcpuRequests: 250m
       devmemoryLimits: 2048Mi
