--- a/build.gradle
+++ b/build.gradle
@@ -370,7 +370,7 @@ dependencies {
     implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.3.3'
 
 //    implementation group: 'com.github.hmcts', name: 'sscs-common', version: '6.3.13'
-    implementation group: 'com.github.hmcts', name: 'sscs-common', version: 'DEV-SNAPSHOT'
+    implementation group: 'com.github.hmcts', name: 'sscs-common', version: '1555a98'
 
     implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.1.9'
 
