SSCSFT-67 Add 'Confidentiality' to the Reasons Referred to Interloc when in send to interloc
Amend preview env config so that postponements is turned on in preview

--- a/charts/sscs-tribunals-api/values.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.preview.template.yaml
@@ -41,6 +41,7 @@ java:
     ELINKS_V2_FEATURE_ENABLED: true
     DELETED_REDACTED_DOC_ENABLED: true
     TESTING_SUPPORT_ENABLED: true
+    POSTPONEMENTS_FEATURE: true
     EXUI_API_URL: "https://${SERVICE_NAME}-xui"
     ROBOTICS_EMAIL_FROM: "sscs@hmcts.net"
     ROBOTICS_EMAIL_TO: "fake"
