SSCSFT-126 Confirm Launch Darkly works on local

--- a/src/functionalTest/resources/config/application_functional.properties
+++ b/src/functionalTest/resources/config/application_functional.properties
@@ -20,3 +20,7 @@ generate-all-notifications=false
 notifications-list=APPEAL_RECEIVED
 isWelsh=false
 
+ld.sdk-key=${LAUNCH_DARKLY_SDK_KEY:AAAAAAAAAAAAAAAAAAAa}
+ld.user-key=sscs-evidence-share
+
+
