SSCSFT-127 Create test users programmatically on the fly for FTs

--- a/src/main/resources/config/application.yaml
+++ b/src/main/resources/config/application.yaml
@@ -1983,7 +1983,7 @@ http:
         timeout: 5000
 
 ld:
-    sdk-key: AAAAAAAAAAAAA
+    sdk-key: "${LAUNCH_DARKLY_SDK_KEY:AAAAAAAAAAAAA}"
     user-key: sscs-evidence-share
 
 send-grid:
