--- a/src/main/resources/config/application.yaml
+++ b/src/main/resources/config/application.yaml
@@ -277,6 +277,8 @@ feature:
         enabled: ${TRIBUNAL_INTERNAL_DOCUMENTS_ENABLED:false}
     hearings-case-updateV2:
         enabled: ${HEARINGS_CASE_UPDATE_V2_ENABLED:false}
+    cm-other-party-confidentiality:
+        enabled: ${CM_OTHER_PARTY_CONFIDENTIALITY_ENABLED:false}
 
 idam:
     api:
