--- a/build.gradle
+++ b/build.gradle
@@ -120,10 +120,9 @@ tasks.register('functional', Test) {
     include "uk/gov/hmcts/reform/sscs/controllers/**"
     include "uk/gov/hmcts/reform/sscs/bulkscan/**"
     exclude "uk/gov/hmcts/reform/sscs/smoke/**"
-    maxParallelForks = Runtime.runtime.availableProcessors()
     useJUnitPlatform()
     // Run test classes in parallel across available CPU cores
-    maxParallelForks = Math.max(1, Runtime.runtime.availableProcessors() / 2)
+    maxParallelForks = (int) (Runtime.runtime.availableProcessors() / 2)
     // Reduce test JVM GC overhead for CI
     jvmArgs = ['-Xmx1g', '-XX:+UseG1GC']
     // Reduce Gradle test logging noise
